# GIS

./: .env.example  .gitignore  Claude.md  Dockerfile  README.md  deploy_v3.1.sh  main.py  pyproject.toml  requirements.txt
cli_agent/: __init__.py  __main__.py  agent.py  config.py  display.py  main.py  prompts.py  prompts_tui.py  services.py  setup.py  tools.py
cli_agent/tui/: __init__.py  app.py  app.tcss  bridge.py
cli_agent/tui/widgets/: __init__.py  activity_log.py  confirm_modal.py  diff_viewer.py  header_bar.py
evals/: __init__.py  generate_report.py  golden_dataset.json  report.json  run_eval.py
examples/: client.py
issue_solver/: analyze.py  ingest.py  patch.py
src/github_issue_solver/: __init__.py  config.py  exceptions.py  license.py  models.py  server.py
src/github_issue_solver/services/: __init__.py  analysis_service.py  learning_service.py  llm_service.py  patch_service.py
